<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_home">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="80dp"
                        android:text="@string/selamat_datang"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvJam" />

                    <TextView
                        android:id="@+id/tvTanggal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/txt_tanggal"
                        app:layout_constraintStart_toStartOf="@+id/textView7"
                        app:layout_constraintTop_toBottomOf="@+id/textView7" />

                    <TextView
                        android:id="@+id/tvJam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/txt_jam"
                        android:textSize="26sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvForm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/primary_dark"
                app:cardBackgroundColor="@color/primary_dark"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="@+id/cvHeader"
                app:layout_constraintStart_toStartOf="@+id/cvHeader"
                app:layout_constraintTop_toBottomOf="@+id/cvHeader">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="24dp"
                        android:gravity="center"
                        android:text="@string/txt_username"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edtUsernameLogin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/white"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textEmailAddress"
                        android:minHeight="48dp"
                        android:padding="8dp"
                        app:layout_constraintEnd_toEndOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="@string/txt_password"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/edtUsernameLogin"
                        app:layout_constraintStart_toStartOf="@+id/edtUsernameLogin"
                        app:layout_constraintTop_toBottomOf="@+id/edtUsernameLogin" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inpPasswordLogin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        app:passwordToggleEnabled="true"
                        app:layout_constraintEnd_toEndOf="@+id/textView"
                        app:layout_constraintStart_toStartOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/textView">

                        <EditText
                            android:id="@+id/edtPasswordLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:ems="10"
                            android:gravity="center"
                            android:inputType="textPassword"
                            android:minHeight="48dp"
                            android:padding="8dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/txt_login"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="@+id/inpPasswordLogin"
                        app:layout_constraintStart_toStartOf="@+id/inpPasswordLogin"
                        app:layout_constraintTop_toBottomOf="@+id/inpPasswordLogin" />

                    <Button
                        android:id="@+id/btnRegis"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/txt_registrasi"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
                        app:layout_constraintStart_toStartOf="@+id/btnLogin"
                        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

                    <Button
                        android:id="@+id/btnReset"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/txt_reset_password"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="@+id/btnRegis"
                        app:layout_constraintStart_toStartOf="@+id/btnRegis"
                        app:layout_constraintTop_toBottomOf="@+id/btnRegis" />

                    <Button
                        android:id="@+id/btnLoginTamu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/txt_login_sebagai_tamu"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/btnReset"
                        app:layout_constraintStart_toStartOf="@+id/btnReset"
                        app:layout_constraintTop_toBottomOf="@+id/btnReset" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>